--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.titulo-tabela{
+    padding: 0 1rem;    
+    font-size: 20px;
+    font-weight: 500;
+    color: rgba(0,0,0,.87);
+}
+
+.padding05rem{
+    padding: 0.5rem;
+}
+
